# ma_pred

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: style.yml  tests.yml
scripts/: model_downloader.py
src/ma_pred/: __init__.py  __main__.py  cli.py  predictor.py
src/ma_pred/utils/: __init__.py  config.py  logging.py  model_loader.py
tests/: test_config.py  test_model_loader.py
